Rotate shape added