@@ -14,13 +14,26 @@ public class Position {
         this.y = pos[1];
     }
 
+    public void addOneToY() {
+        this.y++;
+    }
+
+    public void addOneToX() {
+        this.x++;
+    }
+
+    public void subtractOneToX() {
+        this.x--;
+    }
+
     public void putOnGrid(ArrayList<ArrayList<Cell>> grid, int[][] shape) {
         for (int i = 0; i < shape.length; ++i) {
             if (this.y - i >= 0) {
                 for (int j = 0; j < shape[0].length; ++j) {
                     Cell cell = grid.get(y - i).get(x + j);
-                    if (shape[shape.length - 1 - i][j] != 0) {
-                        cell.changeContent(shape[shape.length - 1 - i][j]);
+                    int yTarget = shape.length - 1 - i;
+                    if (shape[yTarget][j] != 0) {
+                        cell.changeContent(shape[yTarget][j]);
                     }
                 }
             }
@@ -38,19 +51,6 @@ public class Position {
         }
     }
 
-    public void addOneToY() {
-        this.y++;
-    }
-
-    public void addOneToX() {
-        this.x++;
-    }
-
-    public void subtractOneToX() {
-        this.x--;
-    }
-
-
     public boolean mustStop(ArrayList<ArrayList<Cell>> grid, int[][] shape) {
 
         if (this.y + 1 >= grid.size()) {
@@ -60,7 +60,9 @@ public class Position {
         for (int i = 0; i < shape[0].length; ++i) {
             for (int j = 0; j < shape.length; ++j) {
                 if (shape[shape.length - 1 - j][i] != 0) {
-                    if (this.y - j + 1 >= 0 && grid.get(this.y - j + 1).get(this.x + i).isOccupied()) {
+                    int nextY = this.y - j + 1;
+                    int nextX = this.x + i;
+                    if (nextY >= 0 && grid.get(nextY).get(nextX).isOccupied()) {
                         return true;
                     }
                     break;
@@ -79,8 +81,10 @@ public class Position {
 
         for (int i = 0; i < shape.length; ++i) {
             for (int j = 0; j < shape[0].length; ++j) {
+                int checkY = this.y - shape.length + 1 + i;
+                int checkX = this.x + j;
                 if (shape[i][j] != 0) {
-                    if (this.y - shape.length + 1 + i >= 0 && grid.get(this.y - shape.length + 1 + i).get(this.x + j).isOccupied()) {
+                    if (checkY >= 0 && grid.get(checkY).get(checkX).isOccupied()) {
                         return true;
                     }
                 }
@@ -93,14 +97,16 @@ public class Position {
 
     public boolean collideByRight(ArrayList<ArrayList<Cell>> grid, int[][] shape) {
 
-        if (this.x + shape[0].length > grid.get(0).toArray().length - 1){
+        if (this.x + shape[0].length > grid.getFirst().toArray().length - 1){
             return true;
         }
 
         for (int i = 0; i < shape.length; ++i) {
             for (int j = 0; j < shape[0].length; ++j) {
-                if (shape[i][shape[0].length - 1 - j] != 0) {
-                    if (this.y - shape.length + 1 + i >= 0 && grid.get(this.y - shape.length + 1 + i).get(this.x + shape[0].length - 1 - j).isOccupied()) {
+                int checkY = this.y - shape.length + 1 + i;
+                int checkX = shape[0].length - 1 - j;
+                if (shape[i][checkX] != 0) {
+                    if (checkY >= 0 && grid.get(checkY).get(this.x + checkX).isOccupied()) {
                         return true;
                     }
                 }
